remove overflow hidden from cards, and fix event sub to popover

--- a/NeoBlazorphic/Components/Base/Cards/Card.razor.css
+++ b/NeoBlazorphic/Components/Base/Cards/Card.razor.css
@@ -1,6 +1,5 @@
 ﻿.neo-card {
     height: 100%;
-    overflow: hidden;
     background: linear-gradient(145deg, var(--neo-left-bg-color), var(--neo-right-bg-color));
     transition: --neo-left-bg-color 0.2s, --neo-right-bg-color 0.2s;
 }
